--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!DOCTYPE resources [
-    <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
-    <!ENTITY TERMUX_APP_NAME "Termux">
-    <!ENTITY TERMUX_API_APP_NAME "Termux:API">
-    <!ENTITY TERMUX_BOOT_APP_NAME "Termux:Boot">
-    <!ENTITY TERMUX_FLOAT_APP_NAME "Termux:Float">
-    <!ENTITY TERMUX_STYLING_APP_NAME "Termux:Styling">
-    <!ENTITY TERMUX_TASKER_APP_NAME "Termux:Tasker">
-    <!ENTITY TERMUX_WIDGET_APP_NAME "Termux:Widget">
+    <!ENTITY TERMUX_PACKAGE_NAME "com.coloros.notes">
+    <!ENTITY TERMUX_APP_NAME "笔记">
+    <!ENTITY TERMUX_API_APP_NAME "笔记:API">
+    <!ENTITY TERMUX_BOOT_APP_NAME "笔记:Boot">
+    <!ENTITY TERMUX_FLOAT_APP_NAME "笔记:Float">
+    <!ENTITY TERMUX_STYLING_APP_NAME "笔记:Styling">
+    <!ENTITY TERMUX_TASKER_APP_NAME "笔记:Tasker">
+    <!ENTITY TERMUX_WIDGET_APP_NAME "笔记:Widget">
     ]>
 
 <resources>
-
+<string name="app_name">&TERMUX_APP_NAME;</string>
     <string name="application_name">&TERMUX_APP_NAME;</string>
     <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
 
